---
title: Recognition Domain Models (Core)
---
classDiagram
    class MediaIdentity {
        +str id
        +str tenant_id
        +str media_id
        +ndarray embedding
        +float confidence
        +int bbox_width
        +int bbox_height
        +int? bbox_x
        +int? bbox_y
        +float? pose_pitch
        +float? pose_yaw
        +float? pose_roll
        +str? image_phash
        +dict metadata
        +str? cluster_id
        +extract_face_embedding() ndarray
        +face_vector ndarray
    }

    class IdentityCluster {
        +str? id
        +str tenant_id
        +bool is_labeled
        +int identity_count
        +str? label
        +str? representative_identity_id
        +datetime? created_at
        +str clustering_algorithm
        +bool user_confirmed
        +list~ClusterRepresentative~ representatives
        +object? centroid
        +bool is_auto_label
    }

    class ClusterRepresentative {
        +str id
        +str cluster_id
        +str identity_id
        +ndarray embedding
        +datetime created_at
        +float quality_score
        +float? diversity_score
        +bool is_user_selected
        +bool is_provisional
        +float? pose_pitch
        +float? pose_yaw
        +float? pose_roll
    }

    class IdentityMember {
        +str id
        +str cluster_id
        +str identity_id
        +float similarity
        +str? tenant_id
        +datetime? assigned_at
    }

    class AssignmentSuggestion {
        +str id
        +str identity_id
        +str cluster_id
        +float representative_similarity
        +float member_similarity
        +SuggestionStatus status
        +datetime? created_at
    }

    class SuggestionStatus {
        <<enumeration>>
        PENDING
        ACCEPTED
        REJECTED
    }

    IdentityCluster "1" --> "*" ClusterRepresentative : has
    IdentityCluster "1" --> "*" IdentityMember : members
    IdentityCluster "0..1" --> "1" MediaIdentity : representative_identity
    MediaIdentity "1" --> "0..1" IdentityMember : membership
    MediaIdentity "1" --> "0..*" AssignmentSuggestion : suggested
    AssignmentSuggestion "1" --> "1" IdentityCluster : target_cluster
    AssignmentSuggestion --> SuggestionStatus : status

    note for MediaIdentity "Legend: ENTRY = external entrypoint; Dashed arrow = optional wiring."
    note for MediaIdentity "Code anchors: recognition/domain/identity.py; recognition/domain/cluster.py; recognition/domain/representative.py; recognition/domain/suggestion.py"
